# Hall_Sensor_Door_Locking

./: .gitignore  README.md
Prototype/: buzzler_test_async.ino  buzzler_test_sync.ino
door_locking_esp32native/: CMakeLists.txt  README.md  sdkconfig
door_locking_esp32native/main/: CMakeLists.txt  buzzer.c  buzzer.h  config.h  config.h.example  hall_sensor.c  hall_sensor.h  main.c  mqtt_client.c  mqtt_client.h  wifi_manager.c  wifi_manager.h
door_locking_esp32native_sleep/: .gitignore
